<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                    <Button
                        android:id="@+id/btnVolume"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="@dimen/main_game_margin_sound"
                        android:background="@drawable/icon_volume_up_icon"/>

                    <TextView
                        android:id="@+id/titleLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/game_name"
                        android:textSize="@dimen/toolbar_title"
                        android:fontFamily="@font/chango"
                        android:layout_marginLeft="@dimen/main_game_margin_toolbar_10dp"
                        android:layout_marginRight="@dimen/main_game_margin_toolbar_10dp"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/btnHint"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/main_game_margin_toolbar_10dp"
                        android:layout_marginRight="@dimen/main_game_margin_toolbar_10dp"
                        android:background="@drawable/icon_hint_off" />

                    <TextView
                        android:id="@+id/questionCountLbl"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="@dimen/main_game_margin_score_left"
                        android:layout_marginRight="@dimen/main_game_margin_score_right"
                        android:text="@string/score"
                        android:textSize="@dimen/main_game_score_lbl"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/game_icon_border"
                        android:gravity="center"/>

            </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_game_progressbar_margin_top"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/timeRemainingLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeRemainingLbl"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorDarkBlue"/>

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/timeRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 10s"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorDarkBlue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/main_game_quiz_lbl_margin_top"
        android:padding="@dimen/main_game_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_Lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorDarkBlue"
                android:textSize="@dimen/main_game_lbl" />

            <TextView
                android:id="@+id/answer_Lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorDarkBlue"
                android:textSize="@dimen/main_game_lbl"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/main_game_margin_toolbar_10dp">

        <TextView
            android:id="@+id/game_Status_Lbl"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/statusLbl"
            android:textSize="@dimen/main_game_statusLbl_txt"
            android:textColor="@color/colorDarkBlue"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scoreDisplayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:background="@color/colorDarkBlue"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SCORE"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/scoreLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="60sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="60dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Try Again"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/tryAgainBtn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/icon_try_again"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/numberPadLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_marginTop="@dimen/main_game_key_pad_margin_top"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="308dp"
                android:layout_height="1dp"
                android:background="@color/colorDarkBlue" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/key1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key1"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@color/colorWhite"/>

            <Button
                android:id="@+id/key2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key2"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@drawable/keypad_mid_buttons_border"/>

            <Button
                android:id="@+id/key3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key3"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@drawable/keypad_buttons_right_only_border"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="308dp"
                android:layout_height="1dp"
                android:background="@color/colorDarkBlue" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/key4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key4"
                android:textColor="@color/colorDarkBlue"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:background="@color/colorWhite"/>

            <Button
                android:id="@+id/key5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key5"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@drawable/keypad_mid_buttons_border"/>

            <Button
                android:id="@+id/key6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key6"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@drawable/keypad_buttons_right_only_border"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="308dp"
                android:layout_height="1dp"
                android:background="@color/colorDarkBlue" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/key7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key7"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@color/colorWhite"/>

            <Button
                android:id="@+id/key8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key8"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@drawable/keypad_mid_buttons_border"/>

            <Button
                android:id="@+id/key9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key9"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@drawable/keypad_buttons_right_only_border"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDarkBlue" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/key_del"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_del"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@color/colorWhite"/>

            <Button
                android:id="@+id/key0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key0"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@drawable/keypad_mid_buttons_border"/>

            <Button
                android:id="@+id/key_hash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_hash"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@drawable/keypad_buttons_right_only_border"/>

            <Button
                android:id="@+id/key_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_minus"
                android:textSize="@dimen/main_game_key_pad_txt"
                android:textColor="@color/colorDarkBlue"
                android:background="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>